--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -8,7 +8,7 @@
   <table class="table">
     <!-- head -->
     <thead>
-      <tr>
+      <tr> 
         <th>
           <a href="?sort={% if current_sort == 'name' %}-name{% else %}name{% endif %}">
             Event Name
@@ -35,13 +35,13 @@
             <th></th>
           {% endif %}
         {% endfor %}
-        <th></th>
       </tr>
     </thead>
     <tbody>
       <!-- row 1 -->
       {% for event in events %}
-        <tr class="hover:bg-base-300">
+      <tr class="hover:bg-base-300 cursor-pointer" onclick="window.location='{% url 'view_event' event.pk %}'">
+
           <td>{{event.name}}</td>
           <td>{{event.description}}</td>
           <td>{{event.location}}</td>
@@ -65,13 +65,7 @@
               </a>
             </td>
             {% endif %}
-          {% endfor %}
-          <td>
-            <a role="button" class="btn btn-primary" type="submit"
-              href="{% url 'view_event' event.pk %}">
-              View Event
-            </a>
-          </td> 
+          {% endfor %} 
         </tr>
       {% endfor %}
     </tbody>
