--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -34,6 +34,10 @@
         {{form.instance.location}}
     </div>
     <div class="flex flex-row gap-2 w-full">
+        <h2 class="font-bold"> Event Admin: </h2>
+        {{form.instance.admin.get_full_name}}
+    </div>
+    <div class="flex flex-row gap-2 w-full">
         <h2 class="font-bold"> Urgency: </h2>
         {{form.instance.get_urgency_display}}
     </div>
@@ -54,18 +58,11 @@
         {{form.location}}
     </fieldset>
 
-    <div class="flex flex-row gap-2 w-full">
-        
-        {% comment %} <fieldset class="fieldset w-full">
-            <legend class="fieldset-legend">Skills</legend>
-            <details class="dropdown w-full">
-                <summary class="select">Select Skills</summary>
-                <ul class="menu dropdown-content bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
-                    {{form.required_skills}}
-                </ul>
-            </details>
-        </fieldset> {% endcomment %}
+    <fieldset class="fieldset w-full">
+        {{form.admin}}
+    </fieldset>
 
+    <div class="flex flex-row gap-2 w-full">
         <fieldset class="fieldset w-1/2">
             {{form.urgency}}
         </fieldset>
@@ -80,7 +77,7 @@
 
 {% block form_buttons %}
     {% if view_type == 'view' %}
-        <a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Leave</a>
+        <a onClick="javascript:history.go(-1);" class="btn btn-soft btn-success">Back</a>
     {% else %}
         <a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Cancel</a>
         <button type="submit" class="btn btn-soft btn-success">
