Added task and event detail views

--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -1,6 +1,6 @@
-<div class="navbar bg-base-100 shadow-sm">
+<div class="navbar bg-secondary text-secondary-content shadow-sm">
     <div class="flex-1">
-        <a class="btn btn-ghost text-xl font-bold" href="{% url 'landing' %}">Kindred Causes</a>
+        <a class="btn btn-secondary btn-ghost text-xl font-bold" href="{% url 'landing' %}">Kindred Causes</a>
     </div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1 gap-2">
