--- a/kindred_causes/templates/partials/table.html
+++ b/kindred_causes/templates/partials/table.html
@@ -1,24 +1,24 @@
 {% load custom_tags %}
-<div class="h-full overflow-x-auto border border-base-content/5 bg-base-100 w-5xl">
-<div class="text-2xl font-bold w-full text-center">{{ table_title }}</div>
-<table class="table">
-    <thead>
-        <tr>
-            {% for header in headers %}
-                <th>{{ header }}</th>
-            {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for item in records %}
-            <tr class="hover:bg-base-300 cursor-pointer" onclick="window.location='{% url view_page item.pk %}'">
-                {% for field in fields %}
-                    <td>{{ item|get_attr:field }}</td>
+<div class="h-full w-full m-5 overflow-x-auto border border-base-content/5 accent bg-base-100 rounded-2xl">
+    <div class="text-2xl font-bold w-full text-center">{{ table_title }}</div>
+    <table class="table">
+        <thead>
+            <tr>
+                {% for header in headers %}
+                    <th>{{ header }}</th>
                 {% endfor %}
             </tr>
-        {% empty %}
-            <tr><td colspan="{{ fields|length }}">No records found.</td></tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% for item in records %}
+                <tr class="hover:bg-base-300 cursor-pointer" onclick="window.location='{% url view_page item.pk %}'">
+                    {% for field in fields %}
+                        <td>{{ item|get_attr:field }}</td>
+                    {% endfor %}
+                </tr>
+            {% empty %}
+                <tr><td colspan="{{ fields|length }}">No records found.</td></tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
