--- a/kindred_causes/templates/root.html
+++ b/kindred_causes/templates/root.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="{% static 'css/output.css'%}">
 </head>
 <body class="flex flex-col min-h-screen justify-between">
-    {% include 'navbar.html' %}
-    <div class="flex grow">
-    {% block content %}{% endblock content %}
+    <div class="flex flex-col min-h-screen justify-between bg-base-200">
+        {% include 'navbar.html' %}
+        <div class="flex grow">
+        {% block content %}{% endblock content %}
+        </div>
     </div>
     {% include 'footer.html' %}
 </body>
