--- a/kindred_causes/main/templates/landing.html
+++ b/kindred_causes/main/templates/landing.html
@@ -9,7 +9,7 @@
       <div class="max-w-md">
         <h1 class="text-5xl font-bold">Welcome to Kindred Causes</h1>
         <p class="py-6">
-          Welcome to Kindred Causes. This is a school project. Blah blah blah. Lorem ipsum dolor sit, dongus dingus solar schmidt.
+          Connecting you to the causes you care about most.
         </p>
         <div class="flex w-full flex-col">
           <a class="btn btn-lg btn-secondary" href="{% url 'register' %}">Get Started</a>
