--- a/kindred_causes/main/templates/event_details.html
+++ b/kindred_causes/main/templates/event_details.html
@@ -4,16 +4,48 @@
 
 {% block content %}
     <div class="grow grid grid-cols-3 h-fit">
-        <div class="bg-green-500 col-span-1">
-            {{ object.name }}
-            {{ object.descriptiong }}
-            {{ object.location }}
-            {{ object.admin }}
-            {{ object.urgency }}
+        <div class="col-span-1">
+            <div class="justify-between items-center accent bg-base-100 rounded-2xl h-fit flex flex-col space-y-1 py-5 px-10 min-w-md">
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Name: </h2>
+                {{ object.name }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Description: </h2>
+                {{ object.description }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Location: </h2>
+                {{ object.location }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Organizer: </h2>
+                {{ object.admin }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Capacity: </h2>
+                {{ object.capacity }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Attendee Count: </h2>
+                {{ object.attendee_count }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Unassigned Attendees: </h2>
+                {{ object.unassigned_attendee_count }}
+            </div>
+            <div class="flex flex-row gap-2 w-full">
+                <h2 class="font-bold"> Urgency: </h2>
+                {{ object.get_urgency_display }}
+            </div>
+            <a href="new_task" class="btn">
+                Add Task
+            </a>
+            </div>
         </div>
         <div class="col-span-2 flex justify-around h-fit">
             {% include "partials/table.html" with records=tasks fields=tasks_fields headers=tasks_headers table_title="Event Tasks" view_page="view_task" %}
-            
         </div>
     </div>
+
 {% endblock content %}
