--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -1,18 +1,16 @@
-<div class="navbar bg-secondary text-secondary-content shadow-sm">
+<div class="navbar bg-base-100 text-base-content shadow-sm">
     <div class="flex-1">
-        <a class="btn btn-secondary btn-ghost text-xl font-bold" href="{% url 'landing' %}">Kindred Causes</a>
+        <a class="btn btn-ghost text-xl font-bold" href="{% url 'landing' %}">Kindred Causes</a>
     </div>
     <div class="flex-none">
-        <ul class="menu menu-horizontal px-1 gap-2">
+        <ul class="menu menu-horizontal text-black px-1 gap-2">
         {% if not user.is_authenticated %}
         <li><a href="{% url 'register' %}">Sign Up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         {% else %}
+            <li><a href="{% url 'home' %}">Home</a></li>
             {% for group in user.groups.all %}
-                {% if group.name == "Volunteer" %}
-                    <li><a href="{% url 'home' %}">Volunteer Home</a></li>
-                {% elif group.name == "Admin" %}
-                    <li><a href="{% url 'home' %}">Admin Home</a></li>
+                {% if group.name == "Admin" %}
                     <li><a href="{% url 'new_event_management' %}">Create Event</a></li>
                 {% endif %}
             {% endfor %}
