The function to change profile photo when editing the profile

--- a/kindred_causes/main/templates/profile_management.html
+++ b/kindred_causes/main/templates/profile_management.html
@@ -8,6 +8,18 @@
 <!--{% csrf_token %}-->
 <!-- Full Name -->
 <fieldset class="fieldset w-full">
+    <legend class="fieldset-legend">Avatar</legend>
+    <select name="avatar" class="select select-accent w-full">
+        <option selected disabled>Select an Avatar</option>
+        {% for avatar in avatars %}
+            <option value="{{ avatar.id }}" {% if profile.avatar and profile.avatar.id == avatar.id %}selected{% endif %}>
+                {{ avatar.name }}
+            </option>
+        {% endfor %}
+    </select>
+</fieldset>
+
+<fieldset class="fieldset w-full">
     <legend class="fieldset-legend ">Name</legend>
     <input type="text" name="name" class="input w-full" placeholder="Enter Name" value = "{{ profile.name }}" />
 </fieldset>
