--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -11,9 +11,11 @@
         <!--Optional Profile picture src https://i.imgur.com/2H4Zt9P.jpeg -->
         <!--Optional Profile picture src https://i1.sndcdn.com/artworks-x8zI2HVC2pnkK7F5-4xKLyA-t1080x1080.jpg -->
         <div class="flex flex-col items-center space-y-6">
-          <img src="https://i1.sndcdn.com/artworks-x8zI2HVC2pnkK7F5-4xKLyA-t1080x1080.jpg" alt="Avatar" class="rounded-full w-60 h-60">
-          <legend class="fieldset-legend">Pick a file to Change profile photo</legend>
-          <input type="file" class="file-input file-input-neutral"/>
+        {% if profile.avatar %}
+            <img src="{{ profile.avatar.image_url }}" alt="Avatar" class="rounded-full w-60 h-60">
+        {% else %}
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Default Avatar" class="rounded-full w-60 h-60">
+        {% endif %}
           <div class="flex flex-col space-y-4 w-full">
               <a href="/account_management" class="btn btn-primary w-2/3 mx-auto">Edit Profile</a>
               <a href="/volunteer_history" class="btn btn-accent w-2/3 mx-auto">Volunteer History</a>
