--- a/kindred_causes/templates/partials/table.html
+++ b/kindred_causes/templates/partials/table.html
@@ -1,6 +1,6 @@
 {% load custom_tags %}
 <div class="h-full w-full m-5 overflow-x-auto border border-base-content/5 accent bg-base-100 rounded-2xl">
-    <div class="text-2xl font-bold w-full text-center">{{ table_title }}</div>
+    <div class="text-2xl font-bold w-full text-center py-2 bg-neutral text-neutral-content">{{ table_title }}</div>
     <table class="table">
         <thead>
             <tr>
