--- a/kindred_causes/main/templates/event_details.html
+++ b/kindred_causes/main/templates/event_details.html
@@ -6,7 +6,17 @@
     <div class="grow grid grid-cols-3 h-fit gap-5">
         <div class="col-span-1">
             <div class="flex flex-col justify-between items-center h-full w-full m-5 overflow-x-auto border border-base-content/5 accent bg-base-100 rounded-2xl">
-                <div class="text-2xl font-bold w-full text-center py-2 bg-neutral text-neutral-content">Event Details</div>
+                <div class="flex justify-between items-center px-2 w-full bg-neutral text-neutral-content">
+                    <div class="size-6"></div>
+                    <div class="text-2xl font-bold text-center py-2">Event Details</div>
+                    <a class="btn btn-circle btn-ghost" href="{% url 'edit_event_management' event.pk %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                        </svg>
+                        
+                    </a>
+                </div>
+            
                 <div class="grow w-full p-5 flex flex-col justify-between gap-1">
                     <div class="flex flex-row gap-2 w-full">
                         <h2 class="font-bold"> Name: </h2>
