--- a/kindred_causes/main/templates/task_form.html
+++ b/kindred_causes/main/templates/task_form.html
@@ -11,7 +11,7 @@
 
 {% block form_action %}
     {% if view_type == 'update' %}
-        {% url 'new_task' event.id %}
+        {% url 'edit_task' task.id %}
     {% elif view_type == 'create' %}
         {% url 'new_task' event.id %}
     {% endif %}
@@ -39,7 +39,7 @@
     {% if view_type == 'view' %}
         <a onClick="javascript:history.go(-1);" class="btn btn-soft btn-success">Back</a>
     {% else %}
-        <a href="{% url 'event_browser' %}" class="btn btn-soft btn-success">Cancel</a>
+        <a onClick="javascript:history.go(-1);" class="btn btn-soft btn-success">Cancel</a>
         <button type="submit" class="btn btn-soft btn-success">
             {% if view_type == 'update' %} 
                 Save Changes
