Allowed user to select skills in task form

--- a/kindred_causes/main/templates/task_form.html
+++ b/kindred_causes/main/templates/task_form.html
@@ -33,6 +33,10 @@
     <fieldset class="fieldset w-full">
         {{form.location}}
     </fieldset>
+
+    <fieldset class="fieldset w-full">
+        {{form.skills}}
+    </fieldset>
 {% endblock form_content%}
 
 {% block form_buttons %}
