--- a/kindred_causes/main/templates/task_details.html
+++ b/kindred_causes/main/templates/task_details.html
@@ -41,15 +41,11 @@
                         {{ object.location }}
                     </div>
                     <div class="flex flex-row gap-2 w-full">
-                        <h2 class="font-bold"> Organizer: </h2>
-                        {{ object.admin }}
-                    </div>
-                    <div class="flex flex-row gap-2 w-full">
                         <h2 class="font-bold"> Attendee Count: </h2>
                         {{ object.attendee_count }}
                     </div>
-                    <a href="{% url 'new_task' object.id %}" class="btn">
-                        Add Attendee
+                    <a href="{% url 'matching_form' %}" class="btn">
+                        Assign Attendee
                     </a>
                 </div>
             </div>
