--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -32,21 +32,21 @@
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
                     <li>
-                        <a class="justify-between" href="{% url 'account' %}">
+                        <a class="w-full" href="{% url 'account' %}">
                             Account
                         </a>
                     </li>
                     <li>
-                        <a class="justify-between" href="{% url 'inbox' %}">
+                        <a class="justify-between w-full" href="{% url 'inbox' %}">
                             Inbox
                             <span class="badge">2</span>
                         </a>
                     </li>
-                    <li><a>Settings</a></li>
+                    <li><a class="w-full">Settings</a></li>
                     <li>
-                        <form action="{% url 'logout' %}" method="post">
+                        <form class="w-full" action="{% url 'logout' %}" onclick="this.submit();" method="post">
                             {% csrf_token %}
-                            <button type="submit" class="hover: cursor-pointer">Logout</button>
+                            <button type="submit" class="w-full hover: cursor-pointer">Logout</button>
                         </form>
                     </li>
                 </ul>
