--- a/kindred_causes/main/templates/task_details.html
+++ b/kindred_causes/main/templates/task_details.html
@@ -44,6 +44,14 @@
                         <h2 class="font-bold"> Attendee Count: </h2>
                         {{ object.attendee_count }}
                     </div>
+                    <div class="flex flex-row gap-2 w-full">
+                        <h2 class="font-bold"> Required Skills: </h2>
+                        {% for skill in object.skills.all %}
+                            {{ skill.name }} {% if not forloop.last %}, {% endif %}
+                        {% empty %}
+                            No skills required
+                        {% endfor %}
+                    </div>
                     <a href="{% url 'matching_form' %}" class="btn">
                         Assign Attendee
                     </a>
