made the inbox a partial table and added a detail view where user can see the body

--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -1,6 +1,7 @@
 {% extends 'root.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}Task History{% endblock title %}
+
 
 {% block content %}
     <div class="grow flex justify-around h-fit">
