made the create notification form create a individual database value for each attendee in an event

--- a/kindred_causes/main/templates/notification_details.html
+++ b/kindred_causes/main/templates/notification_details.html
@@ -24,6 +24,7 @@
                     {{ object.body }}
                 </div>
             </div>
+            <a onClick="javascript:history.go(-1);" class="btn btn-soft btn-success">Back</a>
         </div>
     </div>
 </div>
