added the unread notifications tracking to the navbar

--- a/kindred_causes/main/templates/notification_details.html
+++ b/kindred_causes/main/templates/notification_details.html
@@ -24,7 +24,10 @@
                     {{ object.body }}
                 </div>
             </div>
-            <a onClick="javascript:history.go(-1);" class="btn btn-soft btn-success">Back</a>
+            <a role="button" class="btn btn-primary" type="submit"
+                href="{% url 'inbox' %}">
+                Back
+              </a>
         </div>
     </div>
 </div>
