Fixed the zip code problem

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -84,7 +84,7 @@
                     <p class="text-lg">Email: {{ email }}</p>
                     <p class="text-lg">Address 1: {{ address1 }}</p>
                     <p class="text-lg">Address 2: {{ address2 }}</p>
-                    <p class="text-lg">Zip Code: {{ zip_code }}</p>
+                    <p class="text-lg">Zip Code: {{ zipcode }}</p>
                     <p class="text-lg">Phone: {{ phone }}</p>
                     <p class="text-lg">User ID: 223344</p>
                 </div>
